--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <p>
             An avant-garde agency focused on
             connecting
+            <br />
             <strong>passion</strong> with
             <strong>logistics</strong>.
           </p>
@@ -39,6 +40,28 @@
     </header>
     <main>
       <section class="max-width-wrapper">
+        <div class="card">
+          <h2 class="indented-heading">
+            Wealth comes from operations
+          </h2>
+          <p>
+            No modern business can thrive without
+            developing a specialization in
+            operations. <em>Huckleberry</em> has
+            helped dozens of companies, from
+            Fortune 50 monoliths to fast-growing
+            Bay Area startups, achieve their goals
+            and meet their KPIs by leveraging our
+            extensive network of logistics
+            experts.
+          </p>
+          <p>
+            <em>Huckleberry</em> was established
+            in 2003 to help ambitious businesses
+            discover their true potential. If that
+            resonates, let's chat. ☎
+          </p>
+        </div>
         <div class="card">
           <h2 class="indented-heading">
             Wealth comes from operations
